Add .env file support